# projetcpp-2a34-connect

./: CMakeLists.txt  connect plus project  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
